Fix font-size on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@
   margin-top: 15px;
   height: 20rem;
 }
+
 #output {
-  font-size: 8rem;
+  font-size: 7rem;
+}
+
+@media screen and (max-width: 480px) {
+  #output {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  #output {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
+}
+
+@media screen and (min-width: 768px) and ( max-width: 1024px) {
+  #output {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
 }
